--- a/adder_circuit/pubspec.yaml
+++ b/adder_circuit/pubspec.yaml
@@ -20,9 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  photo_view: ^0.5.0
   cupertino_icons: ^0.1.2
+
 
 dev_dependencies:
   flutter_test:
